# PulseVector

./: .gitignore  CMakeLists.txt  CMakePresets.json  GEMINI.md  PROGRESS.md  PROJECT_STRUCTURE.md  README.md  build.sh  conanfile.py
assets/textures/: sprite_map.psd
levels/: S3RL-Hentai_2017.pvmap
shaders/: audio_reactive_bg.frag  bloom_combine.frag  bloom_extract.frag  blur.frag  chromatic_aberration.frag  default.vert  radial_blur.frag  wall.frag
src/: main.cpp
src/engine/audio/: AudioCore.cpp  AudioCore.hpp
src/engine/core/: Application.cpp  Application.hpp  AssetManager.hpp  EventBus.hpp  Events.hpp  InputSystem.cpp  InputSystem.hpp  Scene.cpp  Scene.hpp  Timer.cpp  Timer.hpp
src/engine/ecs/: System.hpp
src/engine/graphics/: ParticleSystem.cpp  ParticleSystem.hpp  PostProcessManager.cpp  PostProcessManager.hpp  RenderSystem.cpp  RenderSystem.hpp
src/engine/graphics/components/: LifeTime.hpp  Particle.hpp  Renderable.hpp  TextRenderable.hpp  Transform.hpp  Velocity.hpp
src/engine/utils/: ObjectPool.hpp  Spline.hpp
src/game/: PulseVectorGame.cpp  PulseVectorGame.hpp
src/game/beatmap/: Beatmap.hpp  BeatmapParser.cpp  BeatmapParser.hpp  BeatmapWriter.cpp  BeatmapWriter.hpp
src/game/components/: Approach.hpp  HitObject.hpp  Wall.hpp
src/game/states/: EditorHistory.hpp  LevelEditorMenuScene.cpp  LevelEditorMenuScene.hpp  LevelEditorScene.cpp  LevelEditorScene.hpp  MainScene.cpp  MainScene.hpp  MenuScene.cpp  MenuScene.hpp  SettingsScene.cpp  SettingsScene.hpp  TitleScene.cpp  TitleScene.hpp
src/game/systems/: ApproachSystem.cpp  ApproachSystem.hpp  FeedbackSystem.cpp  FeedbackSystem.hpp  HitSystem.cpp  HitSystem.hpp  RhythmDirector.cpp  RhythmDirector.hpp  ScoringSystem.cpp  ScoringSystem.hpp  WallSystem.cpp  WallSystem.hpp
tasks/: 1_GAME_CONCEPT.md  2_ENGINE_ARCHITECTURE.md  3_SYSTEM_BREAKDOWN.md  4_BEATMAP_SYSTEM.md  5_RENDERING_VISUALS.md  6_PROJECT_STRUCTURE.md  7_BUILD_SYSTEM.md  8_PERFORMANCE_STRATEGY.md  9_FEATURE_SCALABILITY_NOTES.md
tasks/edit/: 1_INFRASTRUCTURE.md  2_TIMELINE_SYSTEM.md  3_PLACEMENT_TOOLS.md  4_TESTING_EXPORT.md
tests/: ApplicationTest.cpp  ApproachSystemTest.cpp  AssetManagerTest.cpp  BeatmapTest.cpp  FeedbackSystemTest.cpp  HitSystemTest.cpp  ObjectPoolTest.cpp  PostProcessManagerTest.cpp  ScoringSystemTest.cpp  SecondaryKeymappingTest.cpp  SplineTest.cpp  TimerTest.cpp
